[tool.poetry]
name = "nssurge-api"
version = "0.2.15"
description = "NSSurge HTTP API for Python"
authors = ["Xinyuan Chen <45612704+tddschn@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/tddschn/nssurge-api"
repository = "https://github.com/tddschn/nssurge-api"
classifiers = [
    "Topic :: Internet :: WWW/HTTP",
    "Operating System :: OS Independent",
]
keywords = ["nssurge", "api", "aiohttp"]

[tool.poetry.scripts]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/tddschn/nssurge-api/issues"

[tool.poetry.dependencies]
python = "^3.11"
aiohttp = "^3.8.1"
typing-extensions = "^4.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
toml = "^0.10.2"
yapf = "^0.32.0"
better-exceptions = "^0.3.3"
bump2version = "^1.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
